# ADA

./: Cargo.toml
src/: main.rs
src/config/: ada_config.rs  mod.rs  plugins_config.rs  structs.rs  user_config.rs
src/plugins/: ada.rs  backup.rs  control.rs  hyperlink.rs  mod.rs  penny.rs  sentry.rs
src/utils/: ai.rs  ai_new.rs  errors.rs  helpers.rs  mod.rs  navigation.rs
