[package]
name = "ada"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
openai = "1.0.0-alpha.14"
async-openai = "0.20.0"
serde_json = "1.0.116"
libloading = "0.8.3"
sysinfo = "0.30.10"
reqwest = "0.12.3"
chrono = "0.4.38"
dotenv = "0.15.0"
dirs = "5.0.1"
